--- a/css/main.scss
+++ b/css/main.scss
@@ -170,6 +170,13 @@ body {
     &Photo {
       width: 580px;
     }
+    &Image {
+      width: 100%;
+      margin: 30px 0 0;
+      img {
+        width: 160px;
+      }
+    }
   }
   &__future {
     margin: 120px 0;
